content go , header

--- a/JS/header.html
+++ b/JS/header.html
@@ -1,9 +1,8 @@
-<div><img src="../icons/favicon.ico"></div>
+
 <!-- <div><a href="../F1_Challenge/" title="formula 1"><img src="../icons/f1.png" alt="formula 1"></a></div> -->
 <!-- <div><a href="../sailing/" title="sailing"><img src="../icons/sailing.png" alt="sailing"></a></div> -->
-<div>
-    <div class="item"><a href="../programming/" title="programming"><img src="../icons/programing.png" alt="programming"></a></div>
-    <div class="submenu">
+<div><a href="../programming/" title="programming"><img src="../icons/programing.png" alt="programming"></a></div>
+<!--     <div class="submenu">
 <a href="../programming/html.html">HTML</a>
 <a href="../programming/css.html">CSS</a>
 <a href="../programming/javascript.html">JavaScript</a>
@@ -13,9 +12,8 @@
 <a href="../programming/vue.html">Vue.js</a>
 <a href="../programming/php.html">php</a>
 <a href="../programming/python.html">python</a>
-<!-- <a onclick="load('../programming/rust.html')">Rust</a> -->
-    </div>
-</div>
+<a onclick="load('../programming/rust.html')">Rust</a>    </div> -->
+
 <!-- <div><a href="../Alpinism/" title="alpinisme"><img src="../icons/alpinism.png" alt="alpinisme"></a></div> -->
 <!-- <div><a href="../flamenco/" title="flamenco"><img src="../icons/flamenco.png" alt="flamenco"></a></div> -->
 <!-- <div><a href="../13vek.html" title="medieval"><img src="../icons/medieval.png" alt="medieval"></a></div> -->
@@ -33,4 +31,4 @@
 <a href="../nu/">nu</a>
     </div>
 </div> -->
-
+<div><img src="../icons/favicon.ico"></div>
