--- a/guitar/i.html
+++ b/guitar/i.html
@@ -17,6 +17,28 @@
 </div>
 
 <div>
+  <h2>Fender Telecaster (1949)</h2>
+  <a href="https://youtu.be/9Cjdy8nssAM">В чём кайф Telecaster'ов</a>
+</div>
+
+<div>
+  <h2>Gibson Les Paul (1952)</h2>
+  <img src="../guitar/GibsonLP.png" alt="" style="float: left">
+  <a href="https://youtu.be/vZHruZTC3hI">В чём кайф Les Paul’ов</a>
+</div>
+
+<div>
+  <h2>Fender Stratocaster (1954)</h2>
+  <img src="" alt="" style="float: left">
+  <a href="https://youtu.be/wl7ZOyKNtAg">В чём кайф Stratocaster</a>
+</div>
+
+<div>
+  <h2>PRS Guitars</h2>
+  <a href="https://youtu.be/USj5nbIvIds">SE 245 Standard</a>
+</div>
+
+<div>
   <h2>Music-Man Steve Morse</h2>
   <img src="../guitar/B207.png" alt="Steve Morse's guitar" style="float: left">
   <a href="http://www.stevemorse.com/gear.html"><img src="http://www.stevemorse.com/DATA/B285."> SteveMorse.com</a><br>
@@ -24,9 +46,9 @@
 </div>
 
 <div>
-  <h2>Gibson Les Paul (1952)</h2>
-  <img src="../guitar/GibsonLP.png" alt="" style="float: left">
-  <a href="https://youtu.be/vZHruZTC3hI">В чём кайф Les Paul’ов</a>
+  <h2>G&L</h2>
+  <img src="" alt="" style="float: left">
+  <a href="http://glguitars.com/">glguitars.com</a>
 </div>
 
 <div>
@@ -39,23 +61,6 @@
   <h2>Tokai LP (1978)</h2>
   <img src="../guitar/als48-vf.png" alt="Tokai ALS48F-VF" style="float: left">
   <a href="http://www.codamusic.ru/model.aspx?model=ALS48F-SR">Tokai ALS48F</a>
-</div>
-
-<div>
-  <h2>Fender Stratocaster (1954)</h2>
-  <img src="" alt="" style="float: left">
-  <a href="https://youtu.be/wl7ZOyKNtAg">В чём кайф Stratocaster</a>
-</div>
-
-<div>
-  <h2>Fender Telecaster (1949)</h2>
-  <a href="https://youtu.be/9Cjdy8nssAM">В чём кайф Telecaster'ов</a>
-</div>
-
-<div>
-  <h2>G&L</h2>
-  <img src="" alt="" style="float: left">
-  <a href="http://glguitars.com/">glguitars.com</a>
 </div>
 
 </div>
