--- a/programming/angular.html
+++ b/programming/angular.html
@@ -1,10 +1,7 @@
 <div id="pageTitle">Angular</div>
 <div id="headerTitle">
-  <a onclick="load('angular.html')"><img src="https://angular.io/assets/images/favicons/favicon.ico" alt="Angular">
-  <span style="color: #e23237">Angular</span></a>
+  <a onclick="load('angular.html')"><img src="https://angular.io/assets/images/favicons/favicon.ico" alt="Angular"></a>
 </div>
-
-
 
 <div class="flex">
   <div id="links">
@@ -14,6 +11,7 @@
     <a href="https://youtu.be/Rf54BH35yrY">Angular 8 Основы (2019)</a><br>
     <a href="https://angular.io/guide/universal">Angular Universal (SSR)</a><br>
     <a href="http://swimlane.github.io/ngx-datatable/#client-sorting">пагинация</a><br>
+    <a href="https://itvdn.com/ru/webinars/description/angular-jump-start">angular-jump-start</a><br>
   </div>
   <div><pre><code>
 sudo npm install -g @angular/cli
