--- a/programming/css.html
+++ b/programming/css.html
@@ -1,32 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CSS</title>
-  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/leonardasf1.css">
-<style>
-.h1 {font-size: 2rem}
-#links img { height: 16px }
-</style>
+<div id="pageTitle">CSS</div>
+<div id="headerTitle">
+  <a onclick="load('css.html')"><img src="../icons/css.svg" alt="css"></a>
+</div>
 
-    <link rel="stylesheet" href="../CSS/highlight.css">
-    <script src="../JS/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-</head>
-
-<body>
-
-  <header>
-    <div id="headerMenu">
-      <div>
-			 <img src="../icons/css.svg">
-			 <span>CSS</span>
-		  </div>
-    </div>
-  </header>
-    <script src="../JS/leoscript.js" async></script>
 <div class="flex">
   <div id="links">
     <a href="https://drafts.csswg.org/"><img src="https://drafts.csswg.org/csslogo.ico" alt="csswg"></a>
@@ -46,7 +22,7 @@
     <li><a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt="reshadow.dev" height="16px"> reshadow </a>
     <a href="https://github.com/lttb/reshadow"><img src="https://github.githubassets.com/favicon.ico" alt="github.com/lttb/reshadow" height="16px"></a></li>
     <li>cssinjs / styled components</li>
-    <li>BEM (block element modifier)</li>
+    <a href="https://habr.com/ru/post/203440/">BEM (block element modifier)</a><br>
     <li>CSS Modules , пропсы </li>
     <li><a href="http://htmlbook.ru/samcss/napisanie-effektivnogo-koda"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"> Написание эффективного кода</a></li>
     <li><a href="http://htmlbook.ru/samcss/kaskadirovanie">Cascading</a></li>
@@ -761,8 +737,3 @@ body {
 }</pre>
 
   </article>
-
-  <footer></footer>
-
-</body>
-</html>
