--- a/programming/html.html
+++ b/programming/html.html
@@ -1,26 +1,7 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>HTML</title>
-  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/leonardasf1.css">
-
-</head>
-
-<body>
-
-<header>
-  <div id="headerMenu">
-    <div>
-      <img src="../icons/html5.png" alt="html5">
-      <span>HTML</span>
-    </div>
-  </div>
-</header>
-
-    <script src="../JS/leoscript.js" async></script>
+<div id="pageTitle">HTML</div>
+<div id="headerTitle">
+  <a onclick="load('html.html')"><img src="../icons/html5.png" alt="html5"></a>
+</div>
 
 <div class="flex">
   <div id="links">
@@ -132,7 +113,6 @@ value=""</pre>
   </select>
 </p>
 </div>
-
 </form>
 </div></details>
 
@@ -583,7 +563,3 @@ value=""</pre>
             fill="url(#grad1)" />
     </svg>
 </article>
-<footer></footer>
-
-</body>
-</html>
