--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -6,7 +6,7 @@
 	<title>Здоровье и Спорт</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
-  <script src="../JS/main.js" defer></script>
+  <script src="../JS/main.js"></script>
 
 </head>
 
@@ -16,7 +16,6 @@
   <div id="headerMenu">
     <div>
       <img src="" alt="">
-      <span>Здоровье и Спорт</span>
     </div>
   </div>
 </header>
